tests/mir/valid/basic.vit
space tests/mir/valid/basic

proc main() -> int {
  let value = 1;
  set value = value + 1;
  give value;
}
