tests/mir/invalid/bad_cfg.vit
space tests/mir/invalid/bad_cfg

// Contract fixture: manual MIR validation rejects missing entry blocks,
// invalid targets and return/terminator mismatches in mir_tests.vit.
proc main() -> int {
  give 0;
}
